[package]
name = "meenle_noonle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[target.powerpc-unknown-eabi.dependencies]
rs_ppc_support = {path = "../../../Wii/dev/mw-ppc-test/rs-ppc-support"}

[profile.dev]
opt-level = "s"
panic = "abort"

[profile.release]
debug = false
opt-level = "z"
panic = "abort"